# laba4-blas

./: CMakeLists.txt
.github/workflows/: main.yml
lib/: TMatrix.h  TVector.h
test/: CMakeLists.txt  test_matrix.cpp
